vest-dsl/test/bad/const_byte_array_len_mismatch.vest
const BAR: [u8; 4] = [1, 2, 3, 4, 5]
